[tool.poetry]
name = "billy-penn"
version = "0.1.0"
description = "A package for meta information about the City of Philadelphia's government."
authors = ["Nick Hand <nick.hand@phila.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fuzzywuzzy = "^0.18.0"
pandas = "^1.4.0"
desert = "^2020.11.18"
python-Levenshtein = "^0.12.2"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
